--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,10 @@
 <project>
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.bluemagic.config.api</groupId>
-    <artifactId>config-api</artifactId>
+    <artifactId>magic-config-api</artifactId>
     <packaging>bundle</packaging>
-    <name>config-api</name>
-    <version>1.0.3-SNAPSHOT</version>
+    <name>magic-config-api</name>
+    <version>1.1.0-SNAPSHOT</version>
     <description>The API for the centralized configuration service
     </description>
     <url>https://sourceforge.net/projects/bluemagic/</url>
@@ -28,7 +28,7 @@
                 <configuration>
                     <instructions>
                         <Bundle-SymbolicName>${pom.groupId}</Bundle-SymbolicName>
-                        <Export-Package>org.bluemagic.config.api.agent;version=1.0,org.bluemagic.config.api.service;version=1.0</Export-Package>
+                        <Export-Package>org.bluemagic.config.api</Export-Package>
                     </instructions>
                 </configuration>
             </plugin>
