--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,17 @@
     <description>The API for the centralized configuration service
     </description>
     <url>https://sourceforge.net/projects/bluemagic/</url>
+    
+    <dependencies>
+        <!-- TEST DEPENDENCIES -->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.7</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
+    
     <build>
         <plugins>
             <plugin>
