--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,5 @@
-<project>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.bluemagic.config.api</groupId>
     <artifactId>magic-config-api</artifactId>
@@ -7,7 +8,7 @@
     <version>1.1.0-SNAPSHOT</version>
     <description>The API for the centralized configuration service
     </description>
-    <url>https://sourceforge.net/projects/bluemagic/</url>
+    <url>https://github.com/bluemagicsource/magic-config-api</url>
     
     <dependencies>
         <!-- TEST DEPENDENCIES -->
