--- a/pom.xml
+++ b/pom.xml
@@ -34,9 +34,9 @@
             </plugin>
             <plugin>
                 <groupId>org.apache.felix</groupId>
-                <artifactId>maven-bundle-plugin
-                </artifactId>
+                <artifactId>maven-bundle-plugin</artifactId>
                 <extensions>true</extensions>
+                <version>2.3.7</version>
                 <configuration>
                     <instructions>
                         <Bundle-SymbolicName>${pom.groupId}</Bundle-SymbolicName>
