--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,9 @@
     <description>The API for the centralized configuration service
     </description>
     <url>https://github.com/bluemagicsource/magic-config-api</url>
-    
+     <properties>
+     	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+     </properties>
     <dependencies>
         <!-- TEST DEPENDENCIES -->
         <dependency>
@@ -23,10 +25,9 @@
     <build>
         <plugins>
             <plugin>
-                <groupId>org.apache.maven.plugins
-                </groupId>
-                <artifactId>maven-compiler-plugin
-                </artifactId>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>2.3.2</version>
                 <configuration>
                     <source>1.6</source>
                     <target>1.6</target>
@@ -39,7 +40,7 @@
                 <version>2.3.7</version>
                 <configuration>
                     <instructions>
-                        <Bundle-SymbolicName>${pom.groupId}</Bundle-SymbolicName>
+                        <Bundle-SymbolicName>${project.groupId}</Bundle-SymbolicName>
                         <Export-Package>org.bluemagic.config.api</Export-Package>
                     </instructions>
                 </configuration>
